# Qt_Chat_CLIENT

./: CMakeLists.txt  Database.h  LoginForm.cpp  LoginForm.h  LoginForm.ui  MainWindow.cpp  MainWindow.ui  RegistrationForm.cpp  RegistrationForm.h  RegistrationForm.ui  StartScreen.cpp  StartScreen.h  StartScreen.ui  Test.cpp  User.cpp  User.h  mainwindow.h
